# Set_Con_CA_v0.2

./: .coverage  .gitignore  CLAUDE.md  PROJECT_JOURNEY.md  README.md  TECHNICAL_DEEP_DIVE.md  TRANSPLANTATION_GUIDE.md  benchmarker.py  build_hf_dataset.py  build_multi_dataset.py  compare_results.py  compare_sweep.py  conca_math.txt  eval_faithfulness.py  evaluate.py  extract_concepts.py  generate_smoke_data.py  grand_audit_eval.py  main.py  prove_superiority.py  pyproject.toml  set_conca_math.txt  set_encoder.py  summery.MD  sweep_benchmarker.py  train.py  train_bridge.py
.claude/: settings.local.json
docs/: PRESENTATION.md  REBUTTAL_PREP.md  architecture.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md
evaluation/: __init__.py  build_multilingual_benchmarks.py  generate_additional_charts.py  plot_results.py  run_all.py  run_benchmark_matrix.py  run_evaluation.py  run_evaluation_resume.py  run_evaluation_v2.py  run_extended_alignment.py
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
results/: BENCHMARK_DEFERRALS.md  EXECUTIVE_SUMMARY.md  Honest_Assessment.md  MASTER_SUPERVISOR_PRESENTATION.md  README.md  REPORT.md  REPORT_DENSE.md  SOTA_COMPARISON_ADDENDUM.md  SUPERVISOR_BRIEFING.md  SetConCA_Comprehensive_Review.md  benchmark_matrix_opus100_multi_en.json  benchmark_matrix_wmt14_fr_en.json  expremtn_plan.MD  extended_alignment_results.json  extended_alignment_terminal_report.txt  initial_report.MD  paper_draft.md  results.json  results_partial.json  results_v2.json  (+2 more)
(+180 files in other folders)
