[project]
name = "setconca"
version = "0.1.0"
description = "Set-ConCA: Concept Component Analysis on Representation Sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "torch>=2.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "einops>=0.6.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
# Uncomment if you add torchvision/torchaudio to dependencies above:
# torchvision = { index = "pytorch-cuda" }
# torchaudio  = { index = "pytorch-cuda" }
