[project]
name = "setconca"
version = "0.2.0"
description = "Set-ConCA: Concept Component Analysis on Representation Sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.6.0",
    "einops>=0.6.0",
    "transformers>=4.40.0",
    "datasets>=2.20.0",
    "accelerate>=1.0.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "scikit-learn>=1.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]

[[tool.uv.index]]
name = "pytorch-cuda"
url  = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
